======================================================================
2009-05-08 clabel takes new kwarg, rightside_up; if False, labels
           will not be flipped to keep them rightside-up.  This
           allows the use of clabel to make streamfunction arrows,
           as requested by Evan Mason. - EF

2009-05-07 'labelpad' can now be passed when setting x/y labels. This
           allows controlling the spacing between the label and its
           axis. - RMM

2009-05-06 print_ps now uses mixed-mode renderer. Axes.draw rasterize
           artists whose zorder smaller than rasterization_zorder.
           -JJL

2009-05-06 Per-artist Rasterization, originally by Eric Bruning. -JJ

2009-05-05 Add an example that shows how to make a plot that updates
           using data from another process.  Thanks to Robert
           Cimrman - RMM

2009-05-05 Add Axes.get_legend_handles_labels method. - JJL

2009-05-04 Fix bug that Text.Annotation is still drawn while set to
           not visible. - JJL

2009-05-04 Added TJ's fill_betweenx patch - JDH

2009-05-02 Added options to plotfile based on question from
           Joseph Smidt and patch by Matthias Michler. - EF


2009-05-01 Changed add_artist and similar Axes methods to
           return their argument. - EF

2009-04-30 Incorrect eps bbox for landscape mode fixed - JJL

2009-04-28 Fixed incorrect bbox of eps output when usetex=True. - JJL

2009-04-24 Changed use of os.open* to instead use subprocess.Popen.
           os.popen* are deprecated in 2.6 and are removed in 3.0. - RMM

2009-04-20 Worked on axes_grid documentation. Added
           axes_grid.inset_locator. - JJL

2009-04-17 Initial check-in of the axes_grid toolkit. - JJL

2009-04-17 Added a support for bbox_to_anchor in
           offsetbox.AnchoredOffsetbox. Improved a documentation.
           - JJL

2009-04-16 Fixed a offsetbox bug that multiline texts are not
           correctly aligned.  - JJL
